--- a/app/main.css
+++ b/app/main.css
@@ -4,13 +4,20 @@
 }
 
 body{
-    background-color: bisque;
+    min-height: -webkit-fill-available;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
-#organizacao{
-    display: flex;
+#body-login{
+    flex-grow: 1;
     padding: 10vh 10vw;
+    background-color: bisque;
+    display: flex;
     flex-direction: column;
+    align-self: center;
 }
 
 #cabecalho{
@@ -114,6 +121,96 @@ body{
         padding: 52px 70px;
     }
 }
+
+/* Estilos do relatório */
+
+#body-relatorio{
+    margin: 0;
+    padding: 0;
+    height: 92vh;
+    display: flex;
+    flex-direction: column;
+    background-color: honeydew;
+}
+
+.texto-barra{
+    color: white;
+    font-weight: 500;
+}
+
+.bkg-barra{
+    background-color: orange;
+}
+
+#barra-superior{
+    padding: 5px 5px 10px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+
+#barra-superior label{
+    height: 100%;
+    font-size: 8vw;
+    text-align: left;
+    flex-grow: 1;
+}
+
+#barra-superior img{
+    height: 10vw;
+    /* align-self: center; */
+}
+
+#bloco-texto{
+    font-size: 4vw;
+    font-family: monospace;
+    font-weight: 600;
+    color: #222;
+    padding: 10px;
+    flex-grow: 1;
+    overflow: scroll;
+    background-color: bisque;
+}
+
+#barra-inferior{
+    display: grid;
+    width: 100%;
+    padding: 0px 10px;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: 70% 30%;
+    align-self: flex-end;
+}
+
+#total{
+    font-size: 8vw;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+#atualizacao{
+    font-size: 3vw;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+#saldo{
+    font-size: 7vw;
+    text-align: end;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.sombra{
+    box-shadow: 2px 0px 5px #000a;
+}
+
+/* Ajustes de tela */
 
 @media (min-width: 600px){
     #link-senha{
