--- a/frontend/assets/css/relatorio.css
+++ b/frontend/assets/css/relatorio.css
@@ -1,42 +1,32 @@
 body{
     margin: 0;
     padding: 0;
-    height: 92vh;
-    display: flex;
-    flex-direction: column;
-    background-color: honeydew;
-}
-
-.texto-barra{
-    color: white;
-    font-weight: 500;
-}
-
-.bkg-barra{
-    background-color: orange;
 }
 
 #barra-superior{
     padding: 5px 5px 10px;
     width: 100%;
+    position: fixed;
     display: flex;
     align-items: center;
+    background-color: orange;
 }
-
 
 #barra-superior label{
     height: 100%;
     font-size: 8vw;
     text-align: left;
+    color: white;
+    font-weight: 500;
     flex-grow: 1;
 }
 
 #barra-superior img{
     height: 10vw;
-    /* align-self: center; */
+    align-self: flex-end;
 }
 
-#bloco-texto{
+#bloco-relatorio{
     font-size: 4vw;
     font-family: monospace;
     font-weight: 600;
@@ -44,41 +34,7 @@ body{
     padding: 10px;
     flex-grow: 1;
     overflow: scroll;
-    background-color: bisque;
-}
-
-#barra-inferior{
-    display: grid;
-    width: 100%;
-    padding: 0px 10px;
-    grid-template-columns: 60% 40%;
-    grid-template-rows: 70% 30%;
-    align-self: flex-end;
-}
-
-#total{
-    font-size: 8vw;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
-
-#atualizacao{
-    font-size: 3vw;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 3;
-}
-
-#saldo{
-    font-size: 7vw;
-    text-align: end;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    background-color: rgb(255, 248, 239);
 }
 
 .sombra{
